objects/SFDC_MDF__c.object
<CustomObject>
    <description>Details of the request Including: partner account, marketing activity, proposed activity date, requested amount, approved amount, and percentage approved.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_History__c</fullName>
        <formula>HYPERLINK(&quot;/00O15000006NbU7?pv0=&quot; &amp; Id , &quot;View Approval History&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Amount__c</fullName>
        <label>Approved Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claimed_Amount__c</fullName>
        <description>Roll-up of all claims to compare to the total amount requested.</description>
        <label>Claimed Amount</label>
        <summarizedField>SFDC_MDF_Claim__c.Claimed_Amount__c</summarizedField>
        <summaryForeignKey>SFDC_MDF_Claim__c.MDF__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_Outcome__c</fullName>
        <label>Desired Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Development_Fund__c</fullName>
        <description>Assign the Fund Request to a Market Development Fund.</description>
        <label>Market Development Fund</label>
        <referenceTo>SFDC_Channel_Budget__c</referenceTo>
        <relationshipLabel>Fund Requests</relationshipLabel>
        <relationshipName>Fund_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <label>Partner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contribution__c</fullName>
        <description>The amount the partner is contributing to this effort. This is in addition to the amount requested of the vendor.</description>
        <label>Partner Contribution</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Approved__c</fullName>
        <formula>Approved_Amount__c / Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Approved</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <label>Request Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <description>Optional field which is more descriptive than the automatically assigned request number</description>
        <label>Request Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <description>Stores the servlet location which is substituted in formula fields.</description>
        <formula>&quot;/servlet/servlet.Integration?lid=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Servlet Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <formula>&quot;/servlet/servlet.FileDownload?file=&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>s_Document Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Action__c</fullName>
        <formula>case(Status__c , &quot;&quot;,  HYPERLINK(S1__c&amp;&quot;01N15000000fKrU&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01515000004olVH&quot;, &quot;Submit&quot;) ), &quot;Submitted&quot;, HYPERLINK(S1__c&amp;&quot;01N15000000fKrV&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01515000004olVI&quot;, &quot;Approve&quot;) )  &amp;  HYPERLINK(S1__c&amp;&quot;01N15000000fKrW&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01515000004olVJ&quot;, &quot;Reject&quot;) ), &quot;Approved&quot;, HYPERLINK(S1__c&amp;&quot;01N15000000fKrW&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01515000004olVJ&quot;, &quot;Reject&quot;) ), &quot;Rejected&quot;, HYPERLINK(S1__c&amp;&quot;01N15000000fKrU&amp;eid=&quot;&amp;Id, IMAGE(S2__c&amp;&quot;01515000004olVH&quot;, &quot;Submit&quot;) ), &quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fund Requests</relationshipLabel>
        <relationshipName>R00N1500000Bwwe4EAB</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fund Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Amount__c</columns>
        <columns>Approved_Amount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ApprovedRequests</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Amount__c</columns>
        <columns>Approved_Amount__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Percent_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PendingApprovalLast30Days</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Pending Approval - Last 30 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PendingApprovalLast7Days</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Pending Approval - Last 7 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Action__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FR-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>